Bug 1302037 - Don't allow SAB in transfer map. r=shu a=gchang